<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_logo_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/logo"
                    android:tint="@color/primaryWhite"/>

                <TextView
                    android:id="@+id/tv_version_text"
                    style="@style/version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_logo_text"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/version" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/et_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tv_username"
                        style="@style/form_et_style"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".15"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/ic_user" />

                    <EditText
                        android:id="@+id/et_username"
                        style="@style/form_et_style"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".80"
                        android:background="@null"
                        android:hint="@string/prompt_username"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_3" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tv_password"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".15"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/ic_pass"
                        style="@style/form_et_style" />

                    <EditText
                        android:id="@+id/et_password"
                        style="@style/form_et_style"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".80"
                        android:background="@null"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:inputType="textPassword|textNoSuggestions"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_3" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_states_1"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        style="@style/version_text" />
</RelativeLayout>
